[package]
name = "go-links"
version = "0.1.0"
authors = ["Steven Heidel <steven@rigetti.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.13.0"
rocket = "0.4.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_postgres_pool"]